fix(styles): Color-contrast on form elements valid form-feedback (#2717)
I didn't remove color-contrast rules for several elements, as it will be
handled on other tickets:
* Radio and checkbox:
https://github.com/swisspost/design-system/issues/2681
* Switch: https://github.com/swisspost/design-system/issues/853
* Textarea: https://github.com/swisspost/design-system/issues/1055

--- a/packages/styles/src/variables/components/_form-validation.scss
+++ b/packages/styles/src/variables/components/_form-validation.scss
@@ -17,12 +17,12 @@ $form-feedback-padding-x: button.$input-btn-padding-x !default;
 $form-feedback-padding-y: 0.5 * button.$input-btn-padding-x !default;
 $form-feedback-icon-size: 2rem !default; // Equals 24pt [svg-size]
 $form-feedback-icon-offset: spacing.$size-mini !default;
-$form-feedback-valid-bg: color.$success !default;
+$form-feedback-valid-bg: color.$success-green !default;
 $form-feedback-valid-text: color.$white !default;
 $form-feedback-invalid-bg: color.$error !default;
 $form-feedback-invalid-text: color.$white !default;
-$form-feedback-custom-color: color.$success !default;
-$form-feedback-custom-bg: color.$success !default;
+$form-feedback-custom-color: color.$success-green !default;
+$form-feedback-custom-bg: color.$success-green !default;
 $form-feedback-invalid-box-shadow: 0 0 0 forms.$input-focus-width
   rgba($form-feedback-invalid-color, 0.25) !default;
 $form-feedback-valid-box-shadow: 0 0 0 forms.$input-focus-width
